Fixing overflow issue with the footer and the nav

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -206,7 +206,8 @@ i {
 }
 
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
-  width: 1100px;
+  width: 100%;
+  max-width: 1100px;
 }
 
 .row-fluid .span9 {
@@ -608,7 +609,7 @@ pre .literal   { color: #CDA869; }
 }
 
 .navbar .container {
-  width: 1100px;
+  width: auto;
   position: relative;
 }
 
@@ -723,10 +724,6 @@ pre.terminal .green {
 }
 
 .navbar {
-  .container  {
-    width: 1100px;
-    position: relative;
-  }
   .brand {
     margin-left: 0;
   }
